--- a/Public/Registration.html
+++ b/Public/Registration.html
@@ -28,9 +28,18 @@
             <label for="password">Password</label>
             <input type="password" id="password" name="password" placeholder="Enter your password" required>
 
+            <label for="confirmPassword">Confirm Password</label>
+            <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Confirm your password" required>
+
             <button type="submit">Register</button>
         </form>
+        
+        <p style="margin-top: 10px;">
+            Already have an account? 
+            <a href="/" style="color: blue; text-decoration: underline;">Login here</a>
+        </p>
     </div>
+
     <script src="script.js"></script>
 </body>
 </html>
